lab1/Test/L1-A-13-57.cmm
int ;
int ZbJ7 ( int TKj3OVpYG1YSMlkbTEd9 , int fCKtbrYvsrl 
  ) <= {
  struct QXvy2X_sfvD1NZ5_8rIR TENkgI4x = Q7acoBzsgCDBvInWswgn 
    && DPE3T >= gMjiICeBQK - S9eWFA2 [ a2Iwi13Y0z7AHTH65iJ 
    = sH || Zjzz == tA3PxNQWAj + qhLyeFO * - Lhrsl6eABMh 
    ( hLn06 , rocB3K = nTp33hlxdFn_2mmEvy && != G4AMXSYO8eHzxz58VH 
    [ Y3JNyMPQY || GbEixqJ7V2 * ( bpUAR6wzoGNweEBg3dEL 
    ) <= - ! 1797761782.1163612834 < eI4ZbX9xMRBRd7SGJ 
    ] > kcAb2QUVNfdADL8hmPU ( ) . jLPORO50_bxOa ) / ! 
    - 884483517 ] , aQXJc19NZeh ;
}
;float EUYmxhDN8fGQp9Me2q [ 1622173275 ] , H3TkF8_3QbTXlBwF 

;
int ;
int ;
struct IzyYB0oU {
}wrZxm 
;
struct {
};
int ;
int ;
&int ;
int kT8FJztUuNat7a ( ) {
  f8roctwmNsy_ ;
  MDwEhFRHK 
  if ( Wam0q8UsAAFENMs6B )   if ( m0XkzoP )   if ( 
    xUmUnUDGXw6nyAjwE )   p9MQdqL ;
else   PzX9xX2K7U_kAb ;

else   if ( O )   return A ;
else   if ( j9RK )   yQ2leyexuBwcdXA ;




  while :( yMGQrFSiog_D ) {
  }
}
`@